# near-zk-reputation-poc

./: Cargo.toml  README.md  rust-toolchain.toml
contract-libraries/groth_verifier/near_groth16_verifier/: Cargo.toml
contract-libraries/groth_verifier/near_groth16_verifier/src/: fiatshamir.rs  lib.rs  pairing.rs
contract-libraries/groth_verifier/tests-rs/: verifier_test.wasm
contract-libraries/groth_verifier/tests-rs/src/tests_verifier/: mod.rs
contract-libraries/groth_verifier/verifier_test/: Cargo.toml
contract-libraries/groth_verifier/verifier_test/src/: lib.rs
contract-libraries/near_bigint/: Cargo.toml
contract-libraries/near_bigint/src/: lib.rs
contract-libraries/near_mimc/: Cargo.toml
contract-libraries/plonk_verifier/near_plonk_verifier/: Cargo.toml
contract-libraries/plonk_verifier/near_plonk_verifier/src/: lib.rs  pairing.rs
contracts/testing-contract/: Cargo.toml  README.md
contracts/testing-contract/src/: lib.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: lib.rs
contracts/tests/tests/: integration.rs
gnark-plonky2-verifier/: .gitignore  benchmark.go  go.mod  go.sum
plonky2-reputation/: .gitignore  Cargo.toml  ed25519..verify.json  ed25519.proof
plonky2-reputation/src/: lib.rs  main.rs  test_utils.rs
plonky2-reputation/src/gadgets/: common.rs  mod.rs  private_to_public.rs  reputation_list.rs
