[package]
name = "plonky2-reputation"
description = "Proof reputation system of Near social DB using Plonky2"
authors = ["artur.yurii.korchynskyi@gmail.com"]
keywords = ["snark", "plonky2", "Ed25519"]
categories = ["cryptography"]
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2.workspace = true
plonky2_sha512 = { git = "https://github.com/Electron-Labs/plonky2_sha512" }
plonky2_crypto = { git = "https://github.com/Electron-Labs/plonky2-crypto" }
plonky2_ed25519.workspace = true
itertools = { version = "0.11.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "rc",
] }
anyhow = { version = "1.0.40", default-features = false }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.0.29", features = ["derive"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
ed25519-dalek = "1.0"
rand = { version = "0.7", default-features = false }

[dev-dependencies]
hex-literal = "0.4"


[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3
