[package]
name = "plonky2-reputation"
description = "Proof reputation system of Near social DB using Plonky2"
authors = ["artur.yurii.korchynskyi@gmail.com"]
keywords = ["snark", "plonky2", "Ed25519"]
categories = ["cryptography"]
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { git = "https://github.com/zpoken/plonky2", rev = "a5e436079004cc4870313036324267b385089ee6" }
plonky2_u32 = { git = "https://github.com/zpoken/plonky2", rev = "a5e436079004cc4870313036324267b385089ee6" }
plonky2_ecdsa = { git = "https://github.com/zpoken/plonky2", rev = "a5e436079004cc4870313036324267b385089ee6" }
plonky2_sha512_u32 = { git = "https://github.com/ZpokenWeb3/zk-light-client-implementation" }
plonky2_ed25519 = { git = "https://github.com/ZpokenWeb3/zk-light-client-implementation" }
plonky2_bn128 = { git = "https://github.com/ZpokenWeb3/zk-light-client-implementation" }


itertools = { version = "0.11.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "rc",
] }
anyhow = { version = "1.0.40", default-features = false }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.0.29", features = ["derive"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
ed25519-dalek = "1.0"
rand = { version = "0.7", default-features = false }
num = { version = "0.4", features = ["rand"] }

[dev-dependencies]
hex-literal = "0.4"


[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3
