[package]
name = "plonky2-reputation"
description = "Proof reputation system of Near social DB using Plonky2"
authors = ["artur.yurii.korchynskyi@gmail.com"]
keywords = ["snark", "plonky2", "Ed25519"]
categories = ["cryptography"]
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2.workspace = true
plonky2_u32.workspace = true
plonky2_ecdsa.workspace = true
plonky2_sha512_u32.workspace = true
plonky2_ed25519.workspace = true
plonky2_bn128.workspace = true
itertools = { workspace = true, features = ["use_alloc"] }
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
hex.workspace = true
clap.workspace = true
base64.workspace = true
log.workspace = true
env_logger.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
num.workspace = true

[dev-dependencies]
hex-literal.workspace = true
