[package]
name = "testing-contract"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0.0"
near_groth16_verifier = { path = "../../contract-libraries/groth_verifier/near_groth16_verifier" }
near-bigint = { path = "../../contract-libraries/near_bigint" }

risc0-zkvm = { git = "https://github.com/risc0/risc0.git", default-features = false }
risc0-groth16 = { git = "https://github.com/risc0/risc0.git", default-features = false }
getrandom = { version = "0.2", features = ["custom"] }
rand = "0.8"
serde_json = "1.0"

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
