[package]
name = "testing-contract"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
near_groth16_verifier = { path = "../../contract-libraries/groth_verifier/near_groth16_verifier" }
near-bigint = { path = "../../contract-libraries/near_bigint" }

serde_json = "1.0"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
